# devcontainer

./: .gitignore  AGENTS.md  AGENTS_TEMPLATE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: codex-second-agent-improvements.md
project/: AGENTS.md
project/docs/: decisions.md  runbook.md
project/docs/tickets/: task-ticket.template.md
projects/notecli/: .gitignore  README.md  pyproject.toml
projects/notecli/notecli/: __init__.py  cli.py  store.py
projects/notecli/tests/: test_cli.py
scripts/: codex-second-agent  codex-second-agent-filter.py
